Update CMake config to generate header file independent from having a library or source.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
+project(gl3w C)
+
 cmake_minimum_required(VERSION 2.8)
 
-project(gl3w)
+add_custom_command(
+  OUTPUT include/GLES3/gles3w.h
+  COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/gles3w_gen.py
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gles3w_gen.py)
 
-include_directories(include)
-
-add_library(gl3w src/gl3w.c)
-
-if (UNIX)
-  target_link_libraries(gl3w dl)
-endif()
+add_custom_target(
+  gl3w ALL echo
+  DEPENDS include/GLES3/gles3w.h)
